# scraping_templete

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
app/: main.py
app/helpers/: scraping.py
infrastructure/terraform/gcloud/_modules/google_artifact_registry_repository/cloud_run_image/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/gcloud/_modules/google_cloud_run_service/: main.tf  variables.tf
infrastructure/terraform/gcloud/_modules/tfstate/: main.tf
infrastructure/terraform/gcloud/prd/: backend.tf  cloud_run.tf  cloud_run_image_artifact_registry.tf  locals.tf  provider.tf  services.tf  tfstate.tf
